# mcabber-hacks

./: .gitignore
mcabber/: configure.ac  hgcset.sh
mcabber/mcabber/: commands.c  screen.c  xmpp.c  xmpp_iq.c  xmpp_iqrequest.c  xmpp_muc.c
mcabber/modules/: Makefile.am
mcabber/modules/beep/: beep.c
mcabber/modules/exec/: Makefile.am  exec.c
